--- a/filebeat.yml
+++ b/filebeat.yml
@@ -37,6 +37,30 @@ filebeat.inputs:
     # The host and port to receive the new event
     host: "127.0.0.1:9000"
 
+#------------------------------ NetFlow input --------------------------------
+# Experimental: Config options for the Netflow/IPFIX collector over UDP input
+#- type: netflow
+  #enabled: false
+
+  # Address where the NetFlow Collector will bind
+  host: "127.0.0.1:2055"
+
+  # Maximum size of the message received over UDP
+  #max_message_size: 10KiB
+
+  # List of enabled protocols.
+  # Valid values are 'v1', 'v5', 'v6', 'v7', 'v8', 'v9' and 'ipfix'
+  protocols: [ v9 ]
+
+  # Expiration timeout
+  # This is the time before an idle session or unused template is expired.
+  # Only applicable to v9 and ipfix protocols. A value of zero disables expiration.
+  #expiration_timeout: 30m
+
+  # Queue size limits the number of netflow packets that are queued awaiting
+  # processing.
+  #queue_size: 8192
+
 #----------------------------- Logstash output --------------------------------
 output.logstash:
   # The Logstash hosts
